CHANGES IN FLTK 1.3.0

	- Fixed static linking of image libraries (STR #1962)
	- Fixed fl_set_spot() for Windows (STR #2101)
	- Added sorting to Fl_Browser_ (STR #2113)
	- Added utf8 support for OS X copy and paste
	- Improved handling of composed keys in OS X 10.5 and up
	- Updated the bundled libpng to v1.2.33.
	- Fixed callback would not be called when shortcut was used with
          radio and toggle buttons in default FL_RELEASE mode.
	- Fixed a problem with TrackMouseEvent() (Windows only) that would
	  generate wrong FL_LEAVE events with subwindows. TrackMouseEvent
	  is now enabled by default (it was disabled for GNU compilers).
	  It can be disabled by defining NO_TRACK_MOUSE.
	  Improved test/subwindow.cxx (STR #2079)
	- Fixed documentation (added missing COMCTRL32.LIB dependency)
	- Fixed menu position close to screen border (STR #2057)
	- Improved stability of fl_read_image (STR #2021)
	- Fixed adding an idle handler during
	  a draw() call (STR #1950)
	- Fl_Group::clip_children() is now public (STR #2017)
	- Added clarification to Fl_GL_Window mode
	  function (STR #1945)
	- Fixed Fluid textcolor output (STR #1992)
	- Fixed wrong default value of Fl_Spinner in
	  Fluid (STR #1991)
	- Fixed first modifier key event (STR #1952)
	- Fl_Group and Fl_Scroll now resize themselves before
	  resizing their children (STR #2032)
	- "fltk-config --post foo" now creates an application
	  bundle rather than attaching a resource fork.
	- Added scroll_to(int,int) to Fl_Scroll, replacing
	  position(int,int) which now behaves as it should (STR #1303)
	- Fixed Fl_Scroll inside Fl_Scroll (STR #265)
	- Hardcoded 1.1 references in src/Makefile to 1.3 (STR #1922)
	- Changed font index to 32 bit
	- Changed font size to 32 bit
        - Changed widget coordinates to 32 bit
        - Added support for shortcuts for Fl_Input_,
	  Fl_Value_Input, and Fl_Text_Display derived
          widgets (STR #1770)
        - Initial setup (STR #1904)